# Flow

./: .gitignore  FLOW_PLAN.md  Flow-One-Pager.html  PRODUCT_DESIGN.md  PROJECT_PLAN.md  README.md  check_backend.py  check_deploy.py  check_envs.py  check_events.py  check_logs.py  debug_deploy.py  docker-compose.yml  governance-review.md  set_env.py  set_env.sh  vercel.json
backend/: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  alembic.ini  flow_dev.db  pyproject.toml  requirements.txt  vercel.json
backend/api/: debug.py  index.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 36882084eaf8_initial_schema.py  9cbb0c38fc4e_add_agent_engine_tables.py
backend/src/app/: __init__.py  config.py  database.py  main.py
backend/src/app/agent/: __init__.py  audit.py  engine.py  llm.py  session.py  skill_tools.py  system_prompt.py  tools.py  workflow_tools.py
backend/src/app/agent/mcp/: __init__.py  fetch.py  filesystem.py  git.py  github.py  memory.py  postgres.py
backend/src/app/auth/: __init__.py  jwt_handler.py  utils.py
backend/src/app/models/: __init__.py  agent_message.py  agent_session.py  audit_log.py  llm_key.py  skill.py  tenant.py  user.py  workflow.py
backend/src/app/routes/: agent.py  auth.py  cron.py  debug.py  demo.py  documents.py  health.py  skills.py  workflows.py
backend/src/app/services/: document_generator.py
backend/tests/: conftest.py  test_auth.py
docs/: competitive-positioning.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  (+2 more)
(+17 files in other folders)
